# ipc

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  README.md  dbus-run.sh
include/: ipc_args.h  ipc_config.h  ipc_message.h  ipc_port.h  ipc_profile.h
interface/: ipc_def.h  ipc_message.h  ipc_mutex.h  ipc_proxy.h  ipc_shm.h  ipc_type.h
lib/: CMakeLists.txt
lib/sdbus/: CMakeLists.txt
modules/: CMakeLists.txt
modules/cmake/: ipc-config-version.cmake  ipc-config.cmake.in
modules/concurrent/: CMakeLists.txt  condition_trigger.cpp  eventloop.cpp  eventloop_manager_p.cpp  eventloop_p.cpp  eventloop_p.h  except.cpp  mesg_p.cpp  mesg_p.h  task_chain.cpp  timer_p.cpp  worker.cpp  worker_manager_p.cpp  worker_p.cpp  worker_p.h
modules/core/: CMakeLists.txt  eventloop_manager_p.cpp  eventloop_p.cpp  eventloop_p.h  mesg_p.cpp  mesg_p.h
modules/core/osac/: CMakeLists.txt  cmessage_queue.cpp  cmessage_queue.h  cmutex.cpp  cmutex.h  csecured_shared_mem.cpp  csecured_shared_mem.h  csemaphore.cpp  csemaphore.h  cshared_memory.cpp  cshared_memory.h  csocket.cpp  csocket.h  cthread.cpp  cthread.h  ctimer.cpp  ctimer.h  osac.h
modules/core/osal/: CMakeLists.txt  ipc_file.h  ipc_message_queue.h  ipc_mutex.h  ipc_process.h  ipc_semaphore.h  ipc_shared_memory.h  ipc_socket.h  ipc_thread.h  osal.cpp  osal.h  system_time.h  timer.cpp  timer.h
modules/core/osal/linux/: ipc_file.cpp  ipc_message_queue.cpp  ipc_mutex.cpp  ipc_process.cpp  ipc_semaphore.cpp  ipc_shared_memory.cpp  ipc_socket.cpp  ipc_thread.cpp  system_time.cpp
modules/core/osal/queue/: CMakeLists.txt  shared_mem_queue.cpp  shared_mem_queue.h
modules/core/osal/windows/: ipc_file.cpp  ipc_message_queue.cpp  ipc_mutex.cpp  ipc_process.cpp  ipc_semaphore.cpp  ipc_shared_memory.cpp  ipc_socket.cpp  ipc_thread.cpp  system_time.cpp
modules/dbus/: dbus_client_proxy.cpp  dbus_server_adaptor.cpp  dbus_server_adaptor.h  sdbus-c++-xml2cpp
modules/debuger/: CMakeLists.txt  debuger.cpp
modules/exception/: CMakeLists.txt  except.cpp  exception_helpers.cpp
modules/identify/: id_provider.h
modules/include/common/: common_helpers.h  utilities.h
modules/include/concurrent/: callback.h  condition_trigger.h  eventloop.h  eventloop_manager.h  except.h  mesg.h  mesg_args.h  meta.h  task.h  task_base.h  task_chain.h  task_helpers.h  timer.h  worker.h  worker_manager.h
modules/include/dbus/: dbus_service.h
modules/include/debuger/: debuger.h
modules/include/exception/: except.h
modules/include/message_queue/: message_queue.h
modules/include/mutex/: mutex_lock.h
modules/include/shm/: shm_instance.h
modules/include/socket/: socket_local.h
modules/interface/: common_helpers.h  eventloop.h  eventloop_manager.h  ipc_def.h  mesg.h  mesg_helpers.h  task_helpers.h  worker.h  worker_manager.h
modules/ipc/: CMakeLists.txt
modules/ipc/dbus/: dbus_service.cpp
modules/ipc/message_queue/: CMakeLists.txt  message_queue.cpp
modules/ipc/mutex/: CMakeLists.txt  mutex_lock.cpp
modules/ipc/shm/: CMakeLists.txt  shm_instance.cpp
modules/test/: CMakeLists.txt  main.cpp  run.sh  test_concurrent.cpp
modules/test/lib_test/: CMakeLists.txt  main.cpp
private/include/: ipc_args.h  ipc_config.h  ipc_factory.h  ipc_instance.h  ipc_port.h  ipc_profile.h  ipc_shm_p.h  ipc_utility.h
private/src/: CMakeLists.txt  ipc_instance.cpp  ipc_profile.cpp
private/src/broker/: ipc_broker.cpp  ipc_broker.h
private/src/broker/dbus/: ipc_broker_dbus.cpp  (+1 more)
private/src/dbus/: dbus_client_adaptor.h  dbus_client_proxy.cpp  dbus_client_proxy.h  dbus_server_adaptor.cpp  dbus_server_adaptor.h  dbus_server_proxy.cpp  dbus_server_proxy.h
private/src/ipc_shm/: ipc_shm.cpp  ipc_shm_p.cpp
private/src/mailbox/: mailbox.h
private/src/os/dbg/: Backtrace.cpp  Backtrace.h  CMakeLists.txt  Debug.cpp  Debug.h  Exception.cpp  Exception.h
private/src/os/osal/: CMakeLists.txt  File.h  MessageQueue.h  Mutex.h  OSAL.h  Process.h  SecuredShareMemory.cpp  SecuredShareMemory.h  Semaphore.h  SharedMemory.h  Socket.h  SystemTime.h  Thread.h  Timer.cpp  Timer.h
private/src/os/osal/linux/: File.cpp  MessageQueue.cpp  Mutex.cpp  Process.cpp  Semaphore.cpp  SharedMemory.cpp  Socket.cpp  SystemTime.cpp  Thread.cpp
private/src/os/osal/windows/: File.cpp  MessageQueue.cpp  Mutex.cpp  Process.cpp  Semaphore.cpp  SharedMemory.cpp  Socket.cpp  SystemTime.cpp  Thread.cpp
private/src/os/queue/: CMakeLists.txt  Queue.cpp  Queue.h
private/src/os/worker/: CMakeLists.txt  CQueueWorker.cpp  CQueueWorker.h  CWorker.cpp  CWorker.h  Worker.h
src/: CMakeLists.txt  ipc_instance.cpp
src/broker/: ipc_broker.cpp  ipc_broker.h  ipc_broker_dbus.h
src/broker/dbus/: ipc_broker_dbus.cpp
src/broker/net/: ipc_broker_net.cpp  ipc_broker_net.h
src/broker/shm/: ipc_broker_shm.cpp  ipc_broker_shm.h
src/dbus/: dbus_client_adaptor.h  dbus_client_proxy.cpp  dbus_client_proxy.h  dbus_server_adaptor.cpp  dbus_server_adaptor.h  dbus_server_proxy.cpp  dbus_server_proxy.h  gbs.ipc.dbus.Broker.xml  gbs.ipc.dbus.Client.xml
src/os/common/: CMakeLists.txt  Singleton.h
src/os/dbg/: Backtrace.cpp  Backtrace.h  Exception.cpp
src/os/osac/: CFile.cpp  CLockGuard.h  CMakeLists.txt  CMessageQueue.cpp  CMessageQueue.h  CSecuredShareMemory.cpp  CSecuredShareMemory.h  CSharedMemory.h  CSocket.cpp  CSocket.h  CThread.cpp  CThread.h  CTimer.h
src/os/osal/: File.h  Mutex.h  Process.h  SecuredShareMemory.cpp  SecuredShareMemory.h  Semaphore.h  SharedMemory.h  SystemTime.h  Thread.h
src/os/osal/linux/: MessageQueue.cpp  Socket.cpp  Thread.cpp
src/os/osal/windows/: File.cpp  Mutex.cpp  Semaphore.cpp  SystemTime.cpp  Thread.cpp
src/os/queue/: Queue.h
src/os/worker/: CQueueWorker.cpp  CQueueWorker.h
src/port/: ipc_port_dbus.cpp  ipc_port_dbus.h
src/port/net/: ipc_port_net.cpp  ipc_port_net.h
src/port/shm/: ipc_port_shm.h
src/proxy/: ipc_proxy_dbus.cpp
src/proxy/dbus/: ipc_proxy_dbus.cpp  ipc_proxy_dbus.h
src/proxy/shm/: ipc_proxy_shm.cpp
test/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
tools/: client.h  server.h  test.xml
uml/: ipc-diagram.pu
(+38 files in other folders)
